trabalhando no visual

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id="loginBox">
+    <div id="loginBox" class="pulsar">
         <h2>🔒 Acesso ao Sistema</h2>
         <input type="text" id="loginUser" placeholder="Usuário">
         <input type="password" id="loginPass" placeholder="Senha">
@@ -18,7 +18,7 @@
     </div>
 
     <header>
-        <h1>Gestão de Almoxarifado</h1>
+        <h1>SmartStock</h1>
     </header>
 
     <nav>
@@ -442,7 +442,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Gestão de Almoxarifado. Todos os direitos reservados.</p>
+        <p>&copy; 2025 Gestão de Almoxarifado. Todos os direitos reservados.</p>
     </footer>
 
     <script src="script.js"></script>
