--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
             <div class="report-options">
                 <label for="relatorioProduto">Produto:</label>
-                <input type="text" id="relatorioProduto" placeholder="Nome ou Código" style="padding: 10px; border-radius: 8px;">
+                <input type="text" id="relatorioProduto" placeholder="Nome ou Código" style="padding: 10px; border-radius: 8px;" />
                 <button onclick="gerarRelatorioPorProduto()">Gerar por Produto</button>
             </div>
             <button onclick="gerarRelatorioEstoqueBaixo()">Produtos com Estoque Baixo</button>
